k8s/taskflow-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskflow-blue
  labels:
    app: taskflow
    color: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taskflow
      color: blue
  template:
    metadata:
      labels:
        app: taskflow
        color: blue
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: app
          image: taskflow-api:initial
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 1
            periodSeconds: 2
            timeoutSeconds: 1
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: taskflow-blue
  labels:
    app: taskflow
    color: blue
spec:
  selector:
    app: taskflow
    color: blue
  ports:
    - name: http
      port: 8080
      targetPort: 8080
