k8s/taskflow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskflow
  labels:
    app: taskflow
spec:
  type: ClusterIP
  selector:
    app: taskflow
    color: blue
  ports:
    - name: http
      port: 8080
      targetPort: 8080
